<resources>
    <string name="app_name">Expense tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_on_expense">Add on expense</string>
    <string name="today">Today</string>
    <string name="_500">500</string>
    <string name="expense">Expense:</string>
    <string name="_25000">25000</string>
    <string name="income">Income:</string>
    <string name="add_expense">Add expense</string>
    <string name="ad_expense">Add expense</string>
    <string name="i">Income</string>
    <string name="expnse">Expense</string>
    <string name="toolbar">toolbar</string>
    <string name="incom">Income</string>
    <string name="expensee">Expense</string>
    <string name="save">save</string>
    <string name="text_highlists">Enter Your Monthly Income</string>
    <string name="food_items">Food</string>
    <string name="travel">Travel</string>
    <string name="trans">Transport</string>
    <string name="amount">Amount</string>
    <string name="bill">Mobile Bill</string>
    <string name="clo">Clothers</string>
    <string name="transport">Transport</string>
    <string name="mobile_bill">Mobile Bill</string>
    <string name="others">others</string>
    <string name="sav">Save</string>
    <string name="medical">Medical</string>
    <string name="category">Category</string>
    <string name="sort_high_to_low">Sort:High to Low</string>
    <string name="date_old_to_new">Date:Old to New</string>
</resources>