<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.mainview.UseruploadFragment"
    >


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Add expense"
        android:background="#1098E1"
        app:titleTextColor="@color/white"
        app:menu="@menu/main_menu"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />



     <TableLayout
         android:id="@+id/table"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="16dp"
         android:stretchColumns="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/top_toolbar"

         >

         <TableRow>

             <TextView
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_weight="3"
                 android:text="@string/category"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="italic"
                 android:background="@drawable/border_line"
                 />

             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_weight="2"
                 android:background="@drawable/border_line"
                >

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:textStyle="italic"
                     android:textColor="@color/black"
                     android:textSize="15sp"
                     android:text="@string/amount"
                     android:gravity="center"
                     />


             </LinearLayout>


         </TableRow>

         <TableRow>

             <TextView
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_weight="3"
                 android:text="@string/food_items"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:background="@drawable/border_line"
                 />

             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_weight="2"
                 android:background="@drawable/border_line"
                 >

                 <EditText
                     android:id="@+id/et_food"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="number"
                     android:textStyle="bold"
                     android:textColor="@color/black"
                     android:textSize="15sp"

                     />


             </LinearLayout>


         </TableRow>


         <TableRow>

             <TextView
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_weight="3"
                 android:text="@string/medical"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:background="@drawable/border_line"
                 />

             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_weight="2"
                 android:background="@drawable/border_line"
                 >

                 <EditText
                     android:id="@+id/et_medical"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="number"
                     android:textStyle="bold"
                     android:textColor="@color/black"
                     android:textSize="15sp"

                     />


             </LinearLayout>




         </TableRow>


         <TableRow>

             <TextView
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_weight="3"
                 android:text="@string/travel"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:background="@drawable/border_line"
                 />

             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_weight="2"
                 android:background="@drawable/border_line"
                 >

                 <EditText
                     android:id="@+id/et_travel"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="number"
                     android:textStyle="bold"
                     android:textColor="@color/black"
                     android:textSize="15sp"

                     />


             </LinearLayout>


         </TableRow>


         <TableRow>

             <TextView
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_weight="3"
                 android:text="@string/transport"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:background="@drawable/border_line"
                 />

             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_weight="2"
                 android:background="@drawable/border_line"
                 >

                 <EditText
                     android:id="@+id/et_trans"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="number"
                     android:textStyle="bold"
                     android:textColor="@color/black"
                     android:textSize="15sp"

                     />


             </LinearLayout>


         </TableRow>

         <TableRow>

             <TextView
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_weight="3"
                 android:text="@string/bill"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:background="@drawable/border_line"
                 />

             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_weight="2"
                 android:background="@drawable/border_line"
                 >

                 <EditText
                     android:id="@+id/et_bill"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="number"
                     android:textStyle="bold"
                     android:textColor="@color/black"
                     android:textSize="15sp"

                     />


             </LinearLayout>


         </TableRow>


         <TableRow>

             <TextView
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_weight="3"
                 android:text="@string/clo"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:background="@drawable/border_line"
                 />

             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_weight="2"
                 android:background="@drawable/border_line"
                 >

                 <EditText
                     android:id="@+id/et_clo"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="number"
                     android:textStyle="bold"
                     android:textColor="@color/black"
                     android:textSize="15sp"

                     />


             </LinearLayout>




         </TableRow>


         <TableRow>

             <TextView
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_weight="3"
                 android:text="@string/others"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:background="@drawable/border_line"
                 />

             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="60dp"
                 android:layout_weight="2"
                 android:background="@drawable/border_line"
                 >

                 <EditText
                     android:id="@+id/et_others"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="number"
                     android:textStyle="bold"
                     android:textColor="@color/black"
                     android:textSize="15sp"

                     />


             </LinearLayout>


         </TableRow>




     </TableLayout>


       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/save"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/table"
           app:layout_constraintStart_toStartOf="parent"
           android:text="@string/sav"
           android:textColor="@color/white"
           app:cornerRadius="15dp"
           android:layout_marginTop="40dp"
           android:layout_marginHorizontal="65dp"
           android:backgroundTint="#125963"/>







</androidx.constraintlayout.widget.ConstraintLayout>