<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.mainview.MainFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fcons"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/bottom_radius"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/t_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/bakbak_one"
            android:text="@string/income"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/i_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/bakbak_one"
            android:paddingStart="5dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/t_income"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/t_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/bakbak_one"
            android:text="@string/expense"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/i_amount" />

        <TextView
            android:id="@+id/et_examount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bakbak_one"
            android:paddingHorizontal="5dp"
            android:text="@string/_500"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/t_expense"
            app:layout_constraintTop_toBottomOf="@id/i_amount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/secoand_cons"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:background="@drawable/only_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fcons"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="5dp">

        <TextView
            android:id="@+id/items_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alexandria_semibold"
            android:gravity="center"
            android:text="Expense Items"
            android:textColor="#EEFFD7"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/drop_sortdata"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="25dp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/items_name"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/filter_menubar"
            android:layout_marginTop="6dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rc"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secoand_cons"
        tools:listitem="@layout/user_itemslist"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/click_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#256987"
        android:text="+ADD"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rc" />
</androidx.constraintlayout.widget.ConstraintLayout>